fixed image stretching in chrome

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,8 @@ html, button, input, select, textarea,
 { 
     border-radius: 2px; 
     box-shadow: 0 0 8px -3px rgba(15, 15, 15, 0.49);
+
+    height: 100%;
 }
 
 body > section
